[package]
name = "ai-advisor"
version = "1.0.0"
edition = "2021"
description = "Universal AI-optional, deterministic-first fallback framework for all Bonsai subsystems"
authors = ["Bonsai Team"]
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1", optional = true, default-features = false }
tokio = { version = "1", features = ["sync", "time"], optional = true }
tracing = { version = "0.1", default-features = false }
thiserror = { version = "1", default-features = false }
anyhow = { version = "1", default-features = false }
parking_lot = "0.12"
crossbeam = "0.8"

[features]
default = ["std", "deterministic-core"]
std = ["serde/std", "anyhow/std", "thiserror/std"]
deterministic-core = []
async-runtime = ["tokio"]
json-logging = ["serde_json"]

[lib]
name = "bonsai_ai_fallback"
path = "src/lib.rs"

[[example]]
name = "arbiter_usage"
path = "examples/arbiter_usage.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
