[package]
name = "api-bridge"
version = "0.1.0"
edition = "2021"
description = "Unified multi-protocol API gateway for Bonsai services"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "ws"] }
bytes = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
http = "1.1"
hyper = { version = "1.4", features = ["full"] }
once_cell = "1.19"
prost = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.12", features = ["transport"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

relay = { path = "../relay" }
p2p-core = { path = "../p2p-core" }
transfer-client = { path = "../transfer-client" }
audit-log = { path = "../audit-log" }

[build-dependencies]
tonic-build = "0.12"
