[package]
name = "app-menu"
version = "0.1.0"
edition = "2021"
description = "Universal App Menu for Bonsai Ecosystem - Desktop & Android"

[lib]
name = "bonsai_app_menu"
path = "src/lib.rs"

[[bin]]
name = "app-menu"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
walkdir = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
