[package]
name = "audit-log"
version = "0.1.0"
edition = "2021"
description = "Universal Time Travel Debugging — cryptographically verifiable append-only event ledger"

[dependencies]
tokio    = { version = "1", features = ["full"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
blake3   = "1"
chrono   = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
uuid     = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing  = "0.1"
tokio-rusqlite = "0.6"
