[package]
name = "axiom-verify"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Phase 8: Axiom Formal Verification stubs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
