[package]
name = "bedf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core BEDF Orchestrator"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
tracing-subscriber = { workspace = true }
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[[lib]]
name = "bonsai_bedf"
path = "src/lib.rs"

[[bin]]
name = "bot-main"
path = "src/bin/bonsai-bot-main.rs"
required-features = []

[lints]
workspace = true
