[package]
name = "bkp"
version = "0.1.0"
edition = "2021"
description = "BKP (Bonsai Knowledge Package) builder and loader — create and extract .bkp model archives"

[dependencies]
package = { path = "../package" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"

# Archive/compression
zip = { version = "0.6", features = ["deflate"] }
zstd = "0.13"

# Hashing
blake3 = "1"
hex = "0.4"
sha2 = "0.10"

# Crypto
ed25519-dalek = "2.0"
rand = "0.8"

# Metadata
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
tempfile = "3"
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["full"] }
