[package]
name = "bonsai-algorithm-optimization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Algorithm optimization: lock-free structures, SIMD, cache-aligned layouts, hot-path optimization"

[dependencies]
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true

# Lock-free concurrency
crossbeam = "0.8"
parking_lot = "0.12"
dashmap.workspace = true

# SIMD (packed_simd via std when stable, fallback to scalar)
packed_simd_2 = "0.3"

# Memory and cache optimization
libc = "0.2"

# Benchmarking
criterion = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "lock_free_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[lints]
workspace = true
