[package]
name = "bonsai-api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
