[package]
name = "bonsai-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
ed25519-dalek = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
keyring = "2"
sha2 = "0.10"
anyhow = "1"
chrono = "0.4"
x25519-dalek = "2"
